fixed header overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -84,13 +84,14 @@ nav{
     border-radius: 100px;
     border-style: solid;
 }
-header{
-    padding: auto;
+.header{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
+    align-content: center;
     align-items: center;
-    line-height: 2px;
+    text-align: center;
 }
 
 #projects{
